--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,6 +13,8 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +25,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b ghpage -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +50,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://vasilykonnov.github.io/need-for-drive-admin/",
   "devDependencies": {
     "@types/react": "^17.0.11",
     "@types/react-router-dom": "^5.1.7"
