--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -55,6 +56,7 @@
   "homepage": "https://vasilykonnov.github.io/need-for-drive-admin/",
   "devDependencies": {
     "@types/react": "^17.0.11",
+    "@types/react-paginate": "^7.1.0",
     "@types/react-router-dom": "^5.1.7"
   }
 }
