--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^2.2.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
@@ -56,6 +57,7 @@
   "homepage": "https://vasilykonnov.github.io/need-for-drive-admin/",
   "devDependencies": {
     "@types/react": "^17.0.11",
+    "@types/react-datepicker": "^4.1.1",
     "@types/react-paginate": "^7.1.0",
     "@types/react-router-dom": "^5.1.7"
   }
