--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^3.2.3",
     "js-cookie": "^2.2.1",
     "node-sass": "^6.0.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
