--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@reduxjs/toolkit": "^1.6.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,6 +13,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
@@ -23,7 +24,8 @@
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
-    "react-redux": "^7.2.4",
+    "react-redux": "^7.2.3",
+    "redux-thunk": "^2.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
